<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="SettingFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contentBodyColor">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        style="@style/viewParent.headerText"
        android:text="@string/settings" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileCircleImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/imageBorderColor"
            android:src="@drawable/user_dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/usernameTextView"
            style="@style/viewParent.headerText"
            android:text="@string/patrick_star"
            android:textSize="18sp"
            android:layout_toRightOf="@id/profileCircleImageView"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/profileCircleImageView" />

        <TextView
            style="@style/viewParent.headerText"
            android:text="@string/edit_personal_details"
            android:textSize="16sp"
            android:textColor="#5D5C5C"
            android:layout_below="@id/usernameTextView"
            android:layout_toRightOf="@id/profileCircleImageView"
            android:layout_toEndOf="@id/profileCircleImageView" />

        <ImageView
            style="@style/viewParent"
            android:src="@drawable/ic_more"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <Switch
        android:id="@+id/darkModeSwitch"
        style="@style/settingsText"
        android:drawableLeft="@drawable/ic_dark_mode"
        android:text="Dark Mode" />

    <TextView
        style="@style/viewParent.headerText.settingsMiniTitle"
        android:text="@string/profile"/>

    <TextView
        style="@style/viewParent.headerText.settingsTextIcon"
        android:text="@string/edit_profile"
        app:drawableLeftCompat="@drawable/ic_edit_profile" />

    <TextView
        style="@style/viewParent.headerText.settingsTextIcon"
        android:layout_marginTop="10dp"
        android:text="@string/journey_preferences"
        android:id="@+id/setting_userPreference"
        app:drawableLeftCompat="@drawable/ic_edit_profile" />

    <TextView
        style="@style/viewParent.headerText.settingsTextIcon"
        android:layout_marginTop="10dp"
        android:text="@string/change_password"
        app:drawableLeftCompat="@drawable/ic_edit_password" />

    <TextView
        style="@style/viewParent.headerText.settingsMiniTitle"
        android:text="@string/notifications"/>

    <Switch
        style="@style/settingsText"
        android:checked="true"
        android:drawableLeft="@drawable/ic_notifications"
        android:text="Notifications" />

    <TextView
        style="@style/viewParent.headerText.settingsMiniTitle"
        android:text="@string/regional"/>

    <TextView
        style="@style/viewParent.headerText.settingsTextIcon"
        android:text="@string/language"
        app:drawableLeftCompat="@drawable/ic_languages" />

    <TextView
        style="@style/viewParent.headerText.settingsTextIcon"
        android:text="@string/logout"
        android:id="@+id/setting_logout"
        app:drawableLeftCompat="@drawable/ic_logout" />


    <TextView
        style="@style/viewParent.headerText.settingsMiniTitle"
        android:text="@string/app_ver_0_0_1"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

</LinearLayout>
</ScrollView>